update: added yield logic

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,3 +2,4 @@ VITE_SUI_NETWORK=testnet
 VITE_PACKAGE_ID=0xREPLACE_WITH_PACKAGE_ID
 VITE_MARKET_ID=0xREPLACE_WITH_SHARED_MARKET_ID
 VITE_MOCK_YIELD_ENGINE_ID=0xREPLACE_WITH_SHARED_ENGINE_ID
+VITE_COINGECKO_API_KEY=YOUR_COINGECKO_PRO_KEY
